Updated print style for a bit more contrast and, using point borders size and darker colors. No longer shows links to histogram, detail, alert history and notifications when printing host avail reports.

--- a/application/views/themes/default/css/default/sass/print.sass
+++ b/application/views/themes/default/css/default/sass/print.sass
@@ -3,6 +3,10 @@ div
 	box-shadow: none !important
 	text-shadow: none !important
 
+body
+	font-size: 8pt
+	background-color: #fff
+
 .navigation, .header, .report-links, #save_report_form, .helptext_target
 	display: none !important
 
@@ -37,3 +41,16 @@ a
 
 .pagination_container
 	display: none !important
+
+tr.even
+	background-color: #fff !important
+
+td, th
+	border: 1pt solid #777 !important
+	border-bottom: 1pt solid #bbb !important
+
+th
+	border: 1pt solid #777 !important
+
+#report-links-internal
+	display: none
