--- a/application/views/themes/default/css/pink_n_fluffy/sass/print.sass
+++ b/application/views/themes/default/css/pink_n_fluffy/sass/print.sass
@@ -37,3 +37,16 @@ a
 
 .pagination_container
 	display: none !important
+
+tr.even
+	background-color: #fff !important
+
+td, th
+	border: 1pt solid #777 !important
+	border-bottom: 1pt solid #bbb !important
+
+th
+	border: 1pt solid #777 !important
+
+#report-links-internal
+	display: none
